<resources>
    <string name="app_name">Corona App</string>
    <string name="title_map">Map</string>
    <string name="infected">You are infected!!!</string>
    <string name="title_info">Info</string>
    <string name="title_doctors">Doctors</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_achievements">Test Centers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
</resources>
