<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.coronavirus.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.coronavirus.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_doctors"
        android:name="com.example.coronavirus.ui.doctors.DoctorsFragment"
        android:label="@string/title_doctors"
        tools:layout="@layout/fragment_doctors" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.coronavirus.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.coronavirus.ui.achievements.AchievementsFragment"
        android:label="@string/title_achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.coronavirus.ui.admin.AdminFragment"
        android:label="Admin"
        tools:layout="@layout/fragment_admin" />

</navigation>
